force-app/main/default/objects/User/fields/BypassHandlers__c.field-meta.xml
<CustomField>
    <fullName>BypassHandlers__c</fullName>
    <label>Bypass Handlers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpportunityTrigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>