force-app/main/default/objects/User/fields/Region_activite__c.field-meta.xml
<CustomField>
    <fullName>Region_activite__c</fullName>
    <label>Région d&apos;activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nord</fullName>
            </value>
            <value>
                <fullName>Nord Est</fullName>
            </value>
            <value>
                <fullName>Nord Ouest</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
            <value>
                <fullName>Sud</fullName>
            </value>
            <value>
                <fullName>Sud Est</fullName>
            </value>
            <value>
                <fullName>Sud Ouest</fullName>
            </value>
            <value>
                <fullName>Lyon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>