force-app/main/default/objects/User/fields/signitic_signature__c.field-meta.xml
<CustomField>
    <fullName>signitic_signature__c</fullName>
    <description>Signitic signature</description>
    <label>Signitic signature</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>