force-app/main/default/objects/User/fields/TECH_Responsable_legal_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Responsable_legal_Id__c</fullName>
    <description>Responsable légal de la société du commercial (Permet l&apos;attribution du chiffre d&apos;affaire pour les incubés et les partenaires)</description>
    <label>TECH_Responsable_legal_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>