force-app/main/default/objects/User/validationRules/VR_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001</fullName>
    <active>true</active>
    <description>Numéro de téléphone</description>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;^$|^0[0-9]( [0-9]{2}){4}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Merci de rentrer votre numéro de téléphone au format 06 59 59 59 59 (Un espace tous les deux chiffres)</errorMessage>
</ValidationRule>