force-app/main/default/objects/User/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>en_US</language>
</ListView>