force-app/main/default/objects/User/listViews/Utilisateur_Partenaire_Communaute.listView-meta.xml
<ListView>
    <fullName>Utilisateur_Partenaire_Communaute</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Utilisateur Partenaire Communauté</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Utilisateur Partenaire Communauté</label>
    <language>en_US</language>
</ListView>